Fix card flickering on constraint changes
Suppress fadeUp animations on re-renders so cards don't flash
invisible when the DOM rebuilds. First render still animates normally.

--- a/index.html
+++ b/index.html
@@ -335,6 +335,8 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 /*── Animations ──*/
 @keyframes fadeUp{from{opacity:0;transform:translateY(14px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeDown{from{opacity:0;transform:translateY(-10px)}to{opacity:1;transform:translateY(0)}}
+/* Suppress animations on re-renders to prevent flickering */
+.no-anim .hero-card,.no-anim .plan-card,.no-anim .option-card,.no-anim .insight-item,.no-anim .insights-panel{animation:none!important;opacity:1!important;transform:none!important}
 
 </style>
 </head>
@@ -1134,9 +1136,11 @@ function renderHero(win, sortedNames) {
 
 function renderDecisions() {
   const container = document.getElementById('decisions');
+  const isRerender = container.children.length > 0;
   container.innerHTML = '';
+  if (isRerender) container.classList.add('no-anim');
   const r = STATE.currentResults;
-  if (!r) return;
+  if (!r) { container.classList.remove('no-anim'); return; }
 
   const sortedNames = [...STATE.names].sort((a,b) => getTotalHours(b) - getTotalHours(a));
 
@@ -1158,7 +1162,7 @@ function renderDecisions() {
       while (grid.children.length > cols) {
         overflow.unshift(grid.removeChild(grid.lastChild));
       }
-      [...grid.children].forEach((c, i) => { c.style.animationDelay = `${i * 0.06}s`; });
+      if (!isRerender) [...grid.children].forEach((c, i) => { c.style.animationDelay = `${i * 0.06}s`; });
 
       if (overflow.length > 0) {
         const moreId = 'moreSingles';
@@ -1167,7 +1171,7 @@ function renderDecisions() {
         const moreGrid = document.createElement('div');
         moreGrid.className = 'more-options more-grid';
         moreGrid.id = moreId;
-        overflow.forEach((card, i) => { card.style.animationDelay = `${i * 0.05}s`; moreGrid.appendChild(card); });
+        overflow.forEach((card, i) => { if (!isRerender) card.style.animationDelay = `${i * 0.05}s`; moreGrid.appendChild(card); });
         container.appendChild(moreGrid);
       }
     }
@@ -1184,7 +1188,7 @@ function renderDecisions() {
       const restPlans = plans.slice(3);
 
       visiblePlans.forEach((plan, rank) => {
-        container.appendChild(renderPlanCard(plan, rank, sortedNames));
+        container.appendChild(renderPlanCard(plan, rank, sortedNames, isRerender));
       });
 
       if (restPlans.length > 0) {
@@ -1195,7 +1199,7 @@ function renderDecisions() {
         moreDiv.className = 'more-options';
         moreDiv.id = moreId;
         restPlans.forEach((plan, i) => {
-          moreDiv.appendChild(renderPlanCard(plan, i + 3, sortedNames));
+          moreDiv.appendChild(renderPlanCard(plan, i + 3, sortedNames, isRerender));
         });
         container.appendChild(moreDiv);
       }
@@ -1218,12 +1222,14 @@ function renderDecisions() {
       container.innerHTML = '<div style="text-align:center;padding:2rem;color:var(--text-muted);font-size:.82rem">No valid windows found. Try adjusting constraints.</div>';
     }
   }
+
+  if (isRerender) requestAnimationFrame(() => container.classList.remove('no-anim'));
 }
 
-function renderPlanCard(plan, rank, sortedNames) {
+function renderPlanCard(plan, rank, sortedNames, skipAnim) {
   const card = document.createElement('div');
   card.className = 'plan-card' + (rank === 0 ? ' best' : '');
-  card.style.animationDelay = `${rank * 0.08}s`;
+  if (!skipAnim) card.style.animationDelay = `${rank * 0.08}s`;
 
   const onlyA = [...plan.a.attendees].filter(n => !plan.b.attendees.has(n));
   const onlyB = [...plan.b.attendees].filter(n => !plan.a.attendees.has(n));
