Add GitHub link to footer now that repo is public

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
   </section>
 
   <footer class="landing-footer">
-    Built by <span class="by">Brenden Ferland</span> &middot; Zero tracking &middot; Your data never leaves your browser
+    Built by <span class="by">Brenden Ferland</span> &middot; Zero tracking &middot; Your data never leaves your browser &middot; <a href="https://github.com/PEEKPerformer/when2solve" target="_blank">GitHub</a>
   </footer>
 </div>
 
